hostfs: fix an issue occurring when waiting too long before clicking the alert window
Fixes #17

The alert window was removed and the emulator popup API was used instead,
preventing the former issue to occur.

--- a/view/css/emulator.css
+++ b/view/css/emulator.css
@@ -454,6 +454,7 @@ button {
 }
 
 #popup-message {
+    font-weight: bold;
     position: fixed;
     display: none;
     left: calc(50% - 17.5em);
@@ -465,6 +466,7 @@ button {
     margin-left: auto;
     margin-right: auto;
     z-index: 20;
+    cursor: pointer;
 }
 
 .poperror {
@@ -481,7 +483,7 @@ button {
 
 .poplog {
     color: #074670;
-    background: #699de1;
+    background: #7ca7e0;
     border: 1px solid #0071bf;
 }
 
